# squealy

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  deny.toml  ops  rustfmt.toml  version
.claude/: settings.json
.github/workflows/: ci.yml
crates/squealy/: Cargo.toml
crates/squealy-cli/: Cargo.toml
crates/squealy-cli/src/: extract.rs  lib.rs  main.rs  stub.rs
crates/squealy-cli/tests/: cli.rs
crates/squealy-cli/tests/fixtures/sample/: Cargo.toml
crates/squealy-cli/tests/fixtures/sample/src/: lib.rs
crates/squealy-core/: Cargo.toml
crates/squealy-core/src/: backend.rs  column.rs  connection.rs  cte.rs  database.rs  dialect.rs  expr.rs  foreign_key.rs  index.rs  ir.rs  lib.rs  list.rs  model.rs  projection.rs  query.rs  render.rs  schema.rs  table.rs  view.rs  view_render.rs
crates/squealy-ddl-sqlite/: Cargo.toml
crates/squealy-ddl-sqlite/src/: lib.rs
crates/squealy-ddl-sqlite/tests/: render.rs
crates/squealy-ddl-sqlite/tests/fixtures/: rich_database.sql
crates/squealy-ir/: Cargo.toml
crates/squealy-ir/src/: lib.rs
crates/squealy-macros/: Cargo.toml
crates/squealy-macros/src/: column_type.rs  common.rs  cte.rs  database.rs  expr_parser.rs  expr_tokens.rs  lib.rs  schema.rs  table.rs  tuple.rs  view.rs
crates/squealy-macros/tests/: compile_fail.rs
crates/squealy-macros/tests/compile_fail/: aliased_nullable_primary_key.rs  aliased_nullable_primary_key.stderr  column_type_rejects_unsupported_attribute.rs  column_type_rejects_unsupported_attribute.stderr  column_type_requires_one_field.rs  column_type_requires_one_field.stderr  column_where_requires_unique.rs  column_where_requires_unique.stderr  conflicting_generated_default.rs  conflicting_generated_default.stderr  conflicting_primary_key_nullable.rs  conflicting_primary_key_nullable.stderr  doubly_nullable_option.rs  doubly_nullable_option.stderr  field_must_use_column_type.rs  field_must_use_column_type.stderr  nullable_attribute_removed.rs  nullable_attribute_removed.stderr  unsupported_column_attribute.rs  unsupported_column_attribute.stderr  unsupported_default_literal.rs  unsupported_default_literal.stderr
crates/squealy-macros/tests/pass/: public_table.rs
crates/squealy-model/: Cargo.toml
crates/squealy-model/src/: diff.rs  lib.rs  package.rs  plan.rs  refactor.rs
crates/squealy-model/tests/: deploy.rs  diff.rs  introspect.rs  plan.rs  publish.rs  roundtrip.rs  view_plan.rs
crates/squealy-mysql/: Cargo.toml
crates/squealy-mysql/src/: introspect.rs  lib.rs  query.rs  query_objects.rs  sql.rs
crates/squealy-mysql/tests/: cte.rs  integration.rs  publish.rs  query.rs  recursive_cte.rs  set_ops.rs  sql.rs
crates/squealy-parse/: Cargo.toml
crates/squealy-parse/src/: lib.rs  lower.rs  normalize.rs  reader.rs
crates/squealy-postgresql/: Cargo.toml
crates/squealy-postgresql/src/: canonical.rs  introspect.rs  lib.rs  query.rs  sql.rs
crates/squealy-postgresql/tests/: async_trait_send.rs  cte.rs  integration.rs  publish.rs  recursive_cte.rs  set_ops.rs  sql.rs
crates/squealy-sqlite/: Cargo.toml
crates/squealy-sqlite/src/: introspect.rs  lib.rs  query.rs  query_objects.rs  sql.rs
crates/squealy-sqlite/tests/: integration.rs  plan.rs  query.rs  schema.rs  sql.rs
crates/squealy-test/: Cargo.toml
crates/squealy-test/src/: lib.rs  query.rs  sql.rs
crates/squealy-test/tests/: cte.rs  recursive_cte.rs  set_ops.rs  sql.rs
crates/squealy/src/: backend.rs  column.rs  connection.rs  cte.rs  database.rs  dialect.rs  expr.rs  foreign_key.rs  generator.rs  index.rs  ir.rs  lib.rs  list.rs  main.rs  model.rs  plan.rs  projection.rs  query.rs  render.rs  schema.rs  table.rs  view.rs  view_render.rs
crates/squealy/tests/: compile_fail.rs  cte_derive.rs  derive_metadata.rs  doc_comments.rs  metadata.rs  view_derive.rs  view_lower.rs  wide_table.rs
crates/squealy/tests/compile_fail/: aggregate_arithmetic_is_aggregate_in_select.rs  aggregate_arithmetic_is_aggregate_in_select.stderr  aggregate_group_by_key_rejected.rs  aggregate_group_by_key_rejected.stderr  aggregate_order_by_rejected_for_scalar_select.rs  aggregate_order_by_rejected_for_scalar_select.stderr  aggregate_plus_column_rejected.rs  aggregate_plus_column_rejected.stderr  aggregate_rejected_as_aggregate_operand.rs  aggregate_rejected_as_aggregate_operand.stderr  aggregate_rejected_in_generated_where.rs  aggregate_rejected_in_generated_where.stderr  aggregate_rejected_in_nullable_update_assignment.rs  aggregate_rejected_in_nullable_update_assignment.stderr  aggregate_rejected_in_returning.rs  aggregate_rejected_in_returning.stderr  aggregate_rejected_in_update_assignment.rs  aggregate_rejected_in_update_assignment.stderr  aggregate_rejected_in_where.rs  aggregate_rejected_in_where.stderr  bare_column_having_predicate_rejected_without_group_by.rs  bare_column_having_predicate_rejected_without_group_by.stderr  bare_column_rejected_with_having_no_group_by.rs  bare_column_rejected_with_having_no_group_by.stderr  case_aggregate_condition_is_aggregate.rs  case_aggregate_condition_is_aggregate.stderr  case_aggregate_in_subquery_condition_rejected.rs  case_aggregate_in_subquery_condition_rejected.stderr  case_bare_column_condition_with_aggregate.rs  case_bare_column_condition_with_aggregate.stderr  case_branch_type_mismatch.rs  case_branch_type_mismatch.stderr  case_nonnull_branches_are_not_nullable.rs  case_nonnull_branches_are_not_nullable.stderr  case_requires_at_least_one_when.rs  case_requires_at_least_one_when.stderr  coalesce_arg_type_mismatch.rs  coalesce_arg_type_mismatch.stderr  coalesce_non_null_fallback_is_not_nullable.rs  coalesce_non_null_fallback_is_not_nullable.stderr  (+123 more)
crates/squealy/tests/compile_fail/feature_gated/: extract_requires_timestamp_operand.stderr  min_max_reject_boolean_columns.stderr  unmapped_column_type_requires_db_type.rs  unmapped_column_type_requires_db_type.stderr
docs/: ddl-management.md  review.md
