[workspace]
members = [
    "crates/squealy",
    "crates/squealy-core",
    "crates/squealy-macros",
    "crates/squealy-mysql",
    "crates/squealy-postgresql",
    "crates/squealy-sqlite",
    "crates/squealy-test",
]
default-members = ["crates/squealy"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/smohekey/squealy-lite"
keywords = ["sql", "orm", "query-builder", "postgres", "database"]
categories = ["database"]

[workspace.dependencies]
squealy = { version = "0.1.0", path = "crates/squealy" }
squealy-core = { version = "0.1.0", path = "crates/squealy-core" }
squealy-macros = { version = "0.1.0", path = "crates/squealy-macros" }
squealy-mysql = { version = "0.1.0", path = "crates/squealy-mysql" }
squealy-postgresql = { version = "0.1.0", path = "crates/squealy-postgresql" }
squealy-sqlite = { version = "0.1.0", path = "crates/squealy-sqlite" }
squealy-test = { version = "0.1.0", path = "crates/squealy-test" }
futures-core = "0.3"
thiserror = "2"
trybuild = "1.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.metadata]
name = "squealy"
