[package]
name = "squealy-ir"
description = "Backend-neutral schema/expression data types shared by squealy crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
