[package]
name = "squealy-mysql"
description = "MySQL query backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
systemtime = ["squealy/systemtime"]
bytes = ["dep:bytes", "squealy/bytes"]
uuid = ["dep:uuid", "squealy/uuid"]
serde = ["dep:serde", "dep:serde_json"]
time = ["dep:time", "squealy/time"]
chrono = ["dep:chrono", "squealy/chrono"]

[dependencies]
bytes = { version = "1", optional = true }
chrono = { version = "0.4", optional = true, default-features = false }
futures-core.workspace = true
mysql_async = { version = "0.37", default-features = false, features = ["default-rustls"] }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
squealy.workspace = true
thiserror.workspace = true
time = { version = "0.3", optional = true, default-features = false }
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
