[package]
name = "squealy-parse"
description = "Reverse SQL parser for squealy: dialect SQL text into the neutral schema model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
squealy.workspace = true
sqlparser = "=0.62.0"
thiserror.workspace = true
