[package]
name = "squealy-postgresql"
description = "PostgreSQL backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Schema/DDL management: SchemaBackend rendering, DdlExecutor (publish), and SchemaConnect. Off by
# default so query-only users carry none of it; the management engine and CLI enable it. Pulls tokio
# for spawning the connection task in SchemaConnect, and tracing for reporting connection failures.
schema = ["dep:tokio", "dep:tracing"]

[dependencies]
bytes = "1"
futures-core.workspace = true
squealy.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["rt"], optional = true }
tokio-postgres = "0.7"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
