[package]
name = "squealy-postgresql"
description = "PostgreSQL backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Schema/DDL management: SchemaBackend rendering, DdlExecutor (publish), and SchemaConnect. Off by
# default so query-only users carry none of it; the management engine and CLI enable it. Pulls tokio
# for spawning the connection task in SchemaConnect, and tracing for reporting connection failures.
schema = ["dep:tokio", "dep:tracing"]
# Native `uuid` column support: Encode/Decode for uuid::Uuid against a real `uuid` column.
uuid = ["dep:uuid", "tokio-postgres/with-uuid-1"]
# serde-backed `Json<T>`: any T: Serialize/DeserializeOwned encodes to / decodes from a jsonb column.
serde = ["dep:serde", "dep:serde_json", "tokio-postgres/with-serde_json-1"]
# Native timestamp columns mapped to `timestamptz`. Each enables the matching core feature and the
# Encode/Decode against a real timestamp column. `std::time::SystemTime` is supported by
# tokio-postgres natively (no extra crate feature); `time` / `chrono` enable the respective bridges.
systemtime = ["squealy/systemtime"]
time = ["dep:time", "tokio-postgres/with-time-0_3", "squealy/time"]
chrono = ["dep:chrono", "tokio-postgres/with-chrono-0_4", "squealy/chrono"]

[dependencies]
bytes = "1"
chrono = { version = "0.4", optional = true, default-features = false }
futures-core.workspace = true
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
squealy.workspace = true
thiserror.workspace = true
time = { version = "0.3", optional = true, default-features = false }
tokio = { version = "1", features = ["rt"], optional = true }
tokio-postgres = "0.7"
tracing = { version = "0.1", optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
