[package]
name = "squealy-postgresql"
description = "PostgreSQL query backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
uuid = ["dep:uuid", "tokio-postgres/with-uuid-1", "squealy/uuid"]
bytes = ["squealy/bytes"]
serde = ["dep:serde", "dep:serde_json", "tokio-postgres/with-serde_json-1"]
systemtime = ["squealy/systemtime"]
time = ["dep:time", "tokio-postgres/with-time-0_3", "squealy/time"]
chrono = ["dep:chrono", "tokio-postgres/with-chrono-0_4", "squealy/chrono"]

[dependencies]
bytes = "1"
chrono = { version = "0.4", optional = true, default-features = false }
futures-core.workspace = true
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
squealy.workspace = true
thiserror.workspace = true
time = { version = "0.3", optional = true, default-features = false }
tokio = { version = "1", features = ["rt"] }
tokio-postgres = "0.7"
tracing = "0.1"
uuid = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
