[package]
name = "squealy-sqlite"
description = "SQLite backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
squealy.workspace = true
thiserror.workspace = true
