[package]
name = "squealy-sqlite"
description = "SQLite backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures-core.workspace = true
squealy.workspace = true
thiserror.workspace = true
# `bundled` compiles a modern SQLite from source (past the 3.35 RETURNING threshold) so no system
# `libsqlite3` is required. `tokio-rusqlite` owns the `!Send` `rusqlite::Connection` on a dedicated
# thread and exposes `Send` futures via `.call(|conn| …)`, fitting the executor's `Send` future shape.
tokio-rusqlite = { version = "0.7", features = ["bundled"] }

[dev-dependencies]
squealy-model.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
