[package]
name = "squealy-sqlite"
description = "SQLite query backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures-core.workspace = true
squealy.workspace = true
thiserror.workspace = true
tokio-rusqlite = { version = "0.7", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
