[package]
name = "squealy-test"
description = "Test backend for squealy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Native timestamp column support (enables the core feature so `SystemTime` maps to a timestamp
# column and can be used in the query builder). The in-memory backend needs no Encode/Decode.
systemtime = ["squealy/systemtime"]

[dependencies]
futures-core.workspace = true
squealy.workspace = true
