[package]
name = "squealy"
description = "Typed SQL schema metadata and query builder for Rust"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
uuid = ["dep:uuid", "squealy-core/uuid"]
bytes = ["dep:bytes", "squealy-core/bytes"]
systemtime = ["squealy-core/systemtime"]
time = ["dep:time", "squealy-core/time"]
chrono = ["dep:chrono", "squealy-core/chrono"]

[dependencies]
squealy-core.workspace = true
squealy-macros.workspace = true
uuid = { version = "1", optional = true }
bytes = { version = "1", optional = true }
time = { version = "0.3", optional = true, default-features = false }
chrono = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
squealy-test.workspace = true
trybuild.workspace = true

[lints]
workspace = true
